--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li><a href="#services">Education</a></li>
           <li><a href="#features">Experience</a></li>
           <li><a href="#portfolio">Porjects</a></li>
-          <li><a href="#footer">Get in Contct</a></li>
+          <li><a href="#footer">Get in Contact</a></li>
         </ul>
       </nav><!-- .main-nav-->
 
@@ -179,7 +179,7 @@
               <h5 class="title">Epsilon Scientific |StartUp |Mysuru,Karantaka |Present</h5>
               <p class="description"> 
                 <ul>Worked across the sdlc life cycle to gather the requirments to designand develope tools.</ul> 
-                <ul>Structure several internal system comprising order entry/ management tools, converasion/ revenue reporting and purchase work flow tracking.</ul>
+                <ul>Structure several internal system comprising order entry/ management tools, conversion/ revenue reporting and purchase work flow tracking.</ul>
                 <ul>As well as Design custom RestAPIs built in Python Django- Framework.</ul>
                 <ul>Design and implemented web application, resource configuration and allocation.</ul> 
                  </p>
