--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
             <div class="about-content" data-aos="fade-left" data-aos-delay="100">
               <h2>About Me</h2>
               <h3>Hey!! this is Surabhi,</h3>
-              <p>I'm a software developer from Mysuru.I adept in bringing forth expertise in design, development, installation, testing and maintenance of software systems. Equipped with a diverse and promising skill-set. Proficient in various platforms, languages, and embedded systems. Able to effectively self-manage during independent projects, as well as collaborate as part of a productive team. <br> <br>  I'm currently working with Epsilon Scientific a start up as software developer and a project lead for Enterprise Resource Planning tool. Coding is my passion apart from being a developer I conduct webinars, workshops to engineering students on different technologies. <br><br> I'm also currently persuing MBA in Project Management through distant eduction mode from Jain University Banglore. I have completed my graduation in Computer Science. </p>
-             
+           
+  <p>I’m tech entrepreneur, a software developer, and a teacher at heart. I have conducted various workshops, webinars on different technologies to undergraduates <br><br> I adept in bringing forth expertise in design, development, installation, testing and maintenance of software systems. Equipped with a diverse and promising skill-set. Proficient in various platforms, languages, and embedded systems. Able to effectively self-manage during independent projects, as well as collaborate as part of a productive team. <br> <br>  I'm currently working with Epsilon Scientific a start up as software developer and a project lead for ERP tool and developing tools and technologies for better education <br><br> I'm also currently persuing MBA in Project Management through distant eduction mode from Jain University Banglore. I have completed my graduation in Computer Science. </p>
+
             </div>
           </div>
         </div>
